--- a/styles.css
+++ b/styles.css
@@ -1245,7 +1245,7 @@ p {
 }
 
 .faq-item {
-    margin-bottom: 10px;
+    margin-bottom: 20px; /* Added more space between FAQ items */
 }
 
 .faq-question {
